--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Ebuka Omekagu",
   "license": "ISC",
